# mne-analyze-python

./: .gitignore  LICENSE  README.md  check_wgpu.py  inspect_rc.py  main.py  pyproject.toml  test_wgpu.py
app/desktop/: channel_browser.py  main_window.py  source_traces.py  stc_browser.py  viewport.py  wgpu_widget.py  widgets.py
core/: __init__.py  data.py  state.py  test_headless.py
tests/: __init__.py  test_hover.py
vis/: __init__.py  renderer.py  text.py
